# hge_template

./: CMakeLists.txt  README.md  main.cpp
res/: .gitkeep
